photos endpoint and docs done
