# models/responses.go
@@ -1,0 +1,17 @@
+package models
+
+import "time"
+
+type GetPhotoRes struct {
+	ID        uint      `json:"id"`
+	Title     string    `json:"title"`
+	Caption   string    `json:"caption"`
+	PhotoURL  string    `json:"photo_url"`
+	UserID    uint      `json:"user_id"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+	User      struct {
+		Email    string `json:"email"`
+		Username string `json:"username"`
+	} `json:"User"`
+}
